force-app/main/default/objects/mycustom__c/mycustom__c.object-meta.xml
<CustomObject>
    <label>mycustom</label>
    <nameField>
        <label>mycustom record name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>mycustoms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>