force-app/main/default/objects/mycustom__c/fields/customformula__c.field-meta.xml
<CustomField>
    <fullName>customformula__c</fullName>
    <formula>100+amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>customformula</label>
    <precision>18</precision>
    <scale>18</scale>
    <type>Number</type>
</CustomField>