force-app/main/default/objects/mycustom__c/fields/docattached__c.field-meta.xml
<CustomField>
    <fullName>docattached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>docattached</label>
    <type>Checkbox</type>
</CustomField>