force-app/main/default/objects/mycustom__c/fields/Email_Service_Text__c.field-meta.xml
<CustomField>
    <fullName>Email_Service_Text__c</fullName>
    <label>Email Service Text</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>