force-app/main/default/objects/mycustom__c/fields/mycustoname__c.field-meta.xml
<CustomField>
    <fullName>mycustoname__c</fullName>
    <label>mycustoname</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>