force-app/main/default/objects/mycustom__c/fields/Opp_Name__c.field-meta.xml
<CustomField>
    <fullName>Opp_Name__c</fullName>
    <formula>Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Name</label>
    <type>Text</type>
</CustomField>