force-app/main/default/objects/mycustom__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>mycustoms</relationshipLabel>
    <relationshipName>mycustoms</relationshipName>
    <type>Lookup</type>
</CustomField>